--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
       </div>
       </section>
 
-      <section class="newsletter" data-aos="zoom-out-up">
+      <section class="newsletter">
 
-      <div class="col-md-6 newsTxt">
+      <div class="col-md-6 newsTxt" data-aos="zoom-out-up">
         <h2>Inscreva-se para receber novidades!
           <form>
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" aria-describedby="emailHelp">
@@ -236,7 +236,7 @@
       </div>
       </section>
 
-      <div class="h2depoiment" data-aos="zoom-out-up">
+      <div class="h2depoiment">
         <h2>O que alguns dos nossos clientes estão falando?</h2>
       </div>
       
