--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
       <section class="newsletter">
 
-      <div class="col-md-6 newsTxt" data-aos="zoom-out-up">
+      <div class="col-md-6 newsTxt">
         <h2>Inscreva-se para receber novidades!
           <form>
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" aria-describedby="emailHelp">
@@ -240,7 +240,7 @@
         <h2>O que alguns dos nossos clientes estão falando?</h2>
       </div>
       
-      <section class="depoiments" data-aos="zoom-out-up">
+      <section class="depoiments">
         <div class="depoiment">
           <img src="images/tue.jpg" class="user" alt="Imagem Depoimento">
           <h3>Matuê</h3>
