--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </div class="line1" style="margin-top: 80px;"></div>
 
 
-  <section class="about"data-aos="zoom-in">
-    <div class="container" >
+  <section class="about">
+    <div class="container" data-aos="zoom-in">
       <h2>Quem Somos?</h2>
       <div class="bordertittle"></div>
       <p>Na MyWeb, somos uma agência de marketing digital comprometida com o sucesso dos nossos clientes. Nossa equipe 
@@ -76,7 +76,7 @@
         prontos para levar seu negócio ao próximo nível no universo digital!
       </p>
     </div>
-    <div class="text-center"><button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Saiba mais!</button></div>
+    <div class="text-center" data-aos="zoom-in"><button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Saiba mais!</button></div>
 
     <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
